src/main/grammars/syntaxerkenner/Expr.g4
grammar Expr;
import CommonRules;
prog : stat+ ;
stat : expr NL | NL ;
expr : INT | expr ('+'|'-') expr | expr ('*'|'/') expr | '(' expr ')' ;


/*
Antworten:
1. Type 2 : CFG, weil es hat N -> N*T struktur
2. ja
3.
Recursiv:
expr: indirekt-rekursiv

4.
Associativität
keine

Priorität hoch zu niedrig
alle operatoren gleiche priorität

*/
